examples/test/testpolicy124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy124
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key31: value9
      key21: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value18
          key38: value33
      podSelector:
        matchLabels:
          key35: value41
          key22: value10
